[package]
name = "rox"
version = "0.1.0"
authors = ["freemasen <r.f.masen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
name = "rox"
path = "src/lib.rs"

[[bin]]
name = "roxc"
path = "src/main.rs"