[package]
name = "roxc"
version = "0.1.0"
authors = ["freemasen <r.f.masen@gmail.com>"]
edition = "2018"


[dependencies]
log = "0.4"
hash-chain = "0.3"
rox_shared = { path = "../rox_shared" }
tracing = { version = "0.1", features = []}
tracing-subscriber = {version = "0.2"}
tracing-log = "0.1"
pretty_env_logger = "0.3"
slab = "0.4"
hashers = "1"

[dev-dependencies]


[features]
default = []
debug = []
debug_print = []